* Task/Bug Id: Changed the new dedeploy.xml and deploy.xml by appending _zip to it. Also changed the create_zip target for the same. * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 25317

--- a/build.xml
+++ b/build.xml
@@ -655,8 +655,8 @@
 		<copy file="Show_Hide_Forms.xml" todir="${zip.dir}" overwrite="true" />
 		<copy file="build-properties.xml" todir="${zip.dir}" overwrite="true" />
 		<copy file="MANIFEST.MF" todir="${zip.dir}" overwrite="true" />
-		<copy file="deploy_old.xml" todir="${zip.dir}" overwrite="true" />
-		<copy file="DEDeploy_old.xml" todir="${zip.dir}" overwrite="true" />
+		<copy file="deploy.xml" todir="${zip.dir}" overwrite="true" />
+		<copy file="DEDeploy.xml" todir="${zip.dir}" overwrite="true" />
 		<copy file="performance.properties" todir="${zip.dir}" overwrite="true" />
 		<copy file="login-config.xml" todir="${zip.dir}" overwrite="true" />
 		<copy file="properties-service.xml" todir="${zip.dir}" overwrite="true" />
@@ -844,8 +844,8 @@
 		<copy file="caTissueInstall.properties" todir="${zip.dir}" overwrite="true" />
 		<copy file="build-properties.xml" todir="${zip.dir}/modules/caTissue/conf" overwrite="true" />
 		<copy file="MANIFEST.MF" todir="${zip.dir}" overwrite="true" />
-		<copy file="deploy.xml" todir="${zip.dir}" overwrite="true" />
-		<rename src="${zip.dir}/deploy.xml" dest="${zip.dir}/build.xml"/>
+		<copy file="deploy_zip.xml" todir="${zip.dir}" overwrite="true" />
+		<rename src="${zip.dir}/deploy_zip.xml" dest="${zip.dir}/build.xml"/>
 		<copy file="performance.properties" todir="${zip.dir}/modules/caTissue/conf" overwrite="true" />
 		<copy file="login-config.xml" todir="${zip.dir}/modules/caTissue/conf" overwrite="true" />
 		<copy file="properties-service.xml" todir="${zip.dir}/modules/caTissue/conf" overwrite="true" />
@@ -863,7 +863,8 @@
 		<copy file="clientFormCreator.zip" todir="${zip.dir}/modules/dynamic_extensions/lib" overwrite="true" />
 		<copy file="${base.dir}/WEB-INF/lib/DynamicExtensions.jar"
 			todir="${zip.dir}/modules/dynamic_extensions/lib" overwrite="true" />
-		<copy file="DEDeploy.xml" todir="${zip.dir}/modules/dynamic_extensions/conf" overwrite="true" />
+		<copy file="DEDeploy_zip.xml" todir="${zip.dir}/modules/dynamic_extensions/conf" overwrite="true" />
+		<rename src="${zip.dir}/modules/dynamic_extensions/conf/DEDeploy_zip.xml" dest="${zip.dir}/modules/dynamic_extensions/conf/DEDeploy.xml"/>
 		<copy file="Show_Hide_Forms.xml" todir="${zip.dir}/modules/dynamic_extensions/conf" overwrite="true" />
 		<copy todir="${zip.dir}/modules/dynamic_extensions/conf" overwrite="true">
 			<fileset dir="${base.dir}/DE_conf" />
