* Task/Bug Id: Changed the text for CAS related properties. * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 25326

--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -1,6 +1,7 @@
 #Enter absolute path of the installed directory of JBoss server {JBOSS_HOME}.
 #Please note that the path must be separated by Unix style path separator "/".
 jboss.home.dir=
+
 #Please specify the server configuration name of jboss where you want to deploy.
 #By default it is set to 'default' configuration. This is useful if someone wants
 #to run multiple instances of suite application on same jboss.
@@ -14,6 +15,7 @@ jboss.server.port=8080
 #Hostname or IP address of the machine on which the JBoss server is running.
 #CAUTION: This parameter should not be set to localhost. Set the actual hostname or IP address
 jboss.server.host=localhost
+
 #Enter yes/no to specify Secure HTTP connection
 jboss.container.secure=
 
@@ -35,11 +37,11 @@ database.name=
 database.username=
 database.password=
 
-#Set this property to true if CAS authentication server needs to be deployed on the
-#same server as caTissue (specified by jboss.home.dir)
+#If CAS authentication server needs to be deployed on the
+#same server as caTissue (specified by jboss.home.dir), then set this property to "true"
 deploy.cas.on.catissue.jboss=true
 
-#If cas.deploy is not "true", then fill the following CAS related properties:
+#If "deploy.cas.on.catissue.jboss" is not "true", then fill the following CAS related properties:
 #Hostname or IP address of the machine on which the CAS server is running.
 #CAUTION: This parameter should not be set to localhost. Set the actual hostname or IP address
 cas.jboss.server.host=
@@ -86,11 +88,6 @@ caties.mmtx.home=
 caCORE.jBoss.home.dir=
 caCORE.project.name=
 
-#Choose below option to show/hide dynamic extensions default clinical and pathology forms loaded by the application.
-#Choose false to show all clinical and pathology default annotations for data entry
-#Choose true and edit the Show_Hide_Forms.csv present in the installable folder to display selective forms for data entry
-show.hide.forms=true
-
 #Choose below option to associate dynamic extensions default clinical and pathology forms to the Collection Protocols.
 #Choose false to show all clinical and pathology default annotations for data entry
 #Choose true and edit the Show_Hide_Forms.xml present in the installable folder to associate selective forms to Collection Protocol for data entry
@@ -119,7 +116,3 @@ csm.database.port=
 csm.database.name=
 csm.database.username=
 csm.database.password=
-
-#clinportal-caTissue integration
-#If the value is set to "true", then update the caTissueCdmsIntegration.properties file
-cdms.integrationEnabled=false
