* Task/Bug Id: Add build_war target to the new create_zip target * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 25327

--- a/build.xml
+++ b/build.xml
@@ -776,7 +776,7 @@
 		<antcall target="create_API_client_zip"></antcall>
 	</target>
 
-	<target name="create_zip" depends="">
+	<target name="create_zip" depends="createJavaDoc,installable_build_war">
 		<property name="zip.dir" value="${base.dir}/caTISSUE_Suite_v${application.version}_Installable" />
 		<property name="zip.file" value="${base.dir}/caTissue_Suite_v${application.version}_Installable.zip" />
 
