* Task/Bug Id: Uncommented the delete zip folder and create the API client zip task. * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 25328

--- a/build.xml
+++ b/build.xml
@@ -904,8 +904,8 @@
 		</copy>
 
 		<zip destfile="${zip.file}" basedir="${zip.dir}" />
-		<!--<delete dir="${zip.dir}" />-->
-		<!--<target name="create_API_client_zip">-->
+		<delete dir="${zip.dir}" />
+		<target name="create_API_client_zip">
 
 	</target>
 
