* Task/Bug Id: fixed an ant target. spelled it wrong. * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 25336

--- a/build.xml
+++ b/build.xml
@@ -905,7 +905,7 @@
 
 		<zip destfile="${zip.file}" basedir="${zip.dir}" />
 		<delete dir="${zip.dir}" />
-		<antcall name="create_API_client_zip" />
+		<antcall target="create_API_client_zip" />
 
 	</target>
 
