* Task/Bug Id: Added the Sample-login-config.xml, Sample-properties-service.xml file in the zip. * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 25356

--- a/build.xml
+++ b/build.xml
@@ -852,8 +852,11 @@
 		<copy file="login-config.xml" todir="${zip.dir}/modules/caTissue/conf" overwrite="true" />
 		<copy file="properties-service.xml" todir="${zip.dir}/modules/caTissue/conf" overwrite="true" />
 		<copy file="taggedvalues.xml" todir="${zip.dir}/modules/caTissue/conf" overwrite="true" />
-		<copy file="caTissueCdmsIntegration.properties" todir="${zip.dir}/modules/caTissue/conf" overwrite="true" />
+		<copy file="caTissueCdmsIntegration.properties" todir="${zip.dir}/modules/caTissue/conf" overwrite="true" 
+		/>
 		<copy file="catissuecore-ds.xml" todir="${zip.dir}/modules/caTissue/conf" overwrite="true" />
+		<copy file="Sample-login-config.xml" todir="${zip.dir}/modules/caTissue/conf" overwrite="true" />
+		<copy file="Sample-properties-service.xml" todir="${zip.dir}/modules/caTissue/conf" overwrite="true" />
 
 		<copy todir="${zip.dir}/modules/custom_impl_lib" overwrite="true">
 			<fileset file="Default_label_barcode_gen.jar" />
