* Task/Bug Id: 1. Change the readme.txt to README.txt 2. Changed the readme.txt file to README.txt in create_zip of build.xml file 3. Added the pcaTissue targets deploy_zip.xml file 4. Added the caTIES.prop and deploycaties.xml property in deploy_zip.xml file 5. Removed the move log folders target of export_xmi in DEDeploy_zip.xml file
* Code Reviewed By: <Reviewed By> On : <Review date>
* Technical Details:  <Technical details for the changes made if any>
* Unit tested:   <Names of the test cases>
* Developer Notes: <Free form comments, typically will involve names of the methods changed etc>
* Current Build++ Counts for this file : <B++ counts before the file is checked-in>
* PMD - X     Checkstyle - X     Findbugs - X     CPD – X

SVN-Revision: 25385

--- a/build.xml
+++ b/build.xml
@@ -784,7 +784,7 @@
 		<delete dir="${zip.dir}" />
 		<mkdir dir="${zip.dir}" />
 
-		<copy file="readme.txt" todir="${zip.dir}" overwrite="true" />
+		<copy file="README.txt" todir="${zip.dir}" overwrite="true" />
 
 		<copy file="bulkoperator.zip" todir="${zip.dir}/modules/bulk_operations/lib" overwrite="true" />
 		<copy todir="${zip.dir}/modules/bulk_operations/lib" overwrite="true">
