* Task/Bug Id: Bug 19876 - Changes to the caTissueInstall.properties file * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 25412

--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -41,7 +41,7 @@ database.password=
 #same server as caTissue (specified by jboss.home.dir), then set this property to "true"
 deploy.cas.on.catissue.jboss=true
 
-#If "deploy.cas.on.catissue.jboss" is not "true", then fill the following CAS related properties:
+#If cas.deploy is "false", then fill the following CAS related properties:
 #Hostname or IP address of the machine on which the CAS server is running.
 #CAUTION: This parameter should not be set to localhost. Set the actual hostname or IP address
 cas.jboss.server.host=
@@ -82,7 +82,6 @@ first.admin.password=Login123
 
 #Enter path for the MMTx home directory
 caties.mmtx.home=
-
 
 #Values for DE API
 caCORE.jBoss.home.dir=
