--- a/bulkOperation.properties
+++ b/bulkOperation.properties
@@ -1,3 +1,4 @@
 #bulk operation properties
 bulkoperator.appservice.class=edu.wustl.catissuecore.client.CaTissueAppServiceImpl
 jobGrid.refresh.timeInterval=5
+database.credentials.file=caTissueInstall.properties
