changes for supporting entity BO
SVN-Revision: 26024

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1901,7 +1901,6 @@ errors.specimenCollectionGroup.collectionprotocol=Collection Protocol
 errors.specimenCollectionGroup.collectionprotocolregistration.ppid=Protocol Participant Identifier and collection protocol registration id both are invalid. Any one of them
 
 errors.collectionprotocolregistration.atleast=Either protocol participant identifier or participant is required.
-
 errors.cannotedit.firsttimelogin=You cannot edit the first time login field
 specimencollectiongroup.collectionStatus.errMsg=Collection Status is invalid.
 
@@ -2310,7 +2309,7 @@ date.separator=-
 date.pattern=MM-dd-yyyy
 time.pattern=HH:mm
 timestamp.pattern=MM-dd-yyyy HH:mm
-min.year=1900
+min.year=1800
 max.year=2300
 
 collprot.title.exists = Collection Protocol with the same Title already exists
@@ -2329,7 +2328,6 @@ lineage.nt.changed =  Lineage should not be changed while updating the specimen
 clzz.nt.changed =  Class should not be changed while updating the specimen
 storage.nt.hold.spec = This Storage Container cannot hold \t{0}  Specimen
 invalid.label.barcode =  Invalid Label or Barcode for Parent Specimen :{0}
-
 invalid.site.name =  Invalid Site Name : {0}
 invalid.parent.specimen.identifier = Invalid Identifier of Parent Specimen :{0}
 invalid.specimen.identifier=Invalid Identifier of Specimen :{0}
@@ -2342,17 +2340,6 @@ child.nt.saved =  Cannot insert child specimen {0}, of specimen {1}.
 failed.saved = Failed to save.
 invalid.label =  Invalid Specimen with label {0}
 invalid.barcode =  Invalid Specimen with barcode {0}
-invalid.label.specimen =  Specimen with label {0} does not exists.
-invalid.barcode.specimen = Specimen with barcode {0} does not exists.
-invalid.id.scg=SCG with identifier {0} does not exists.
-invalid.id.specimen=Specimen with identifier {0} does not exists.
-invalid.name.scg =  SCG with name {0} does not exists.
-invalid.barcode.scg =  SCG with barcode {0} does not exists.
-invalid.ppi.participant=Participant with protocol participant identifier {0} in {1} collection protocol does not exists.
-invalid.id.participant= =Participant with identifier {0} does not exists.
-invalid.param.bo.participant=Participant identifier, protocol participant identifier missing. Please specify one of them as per the template definition
-invalid.param.bo.specimen=Specimen identifier, label or barcode missing. Please specify one of them as per the template definition
-invalid.param.bo.scg=SCG identifier, label or barcode missing. Please specify one of them as per the template definition
 user.nt.auth.spec =  User not authorized to update specimens
 label.already.exits =  Label {0} is already exists!
 barcode.already.exits =  Barcode {0} is already exists.
@@ -2488,3 +2475,23 @@ app.migration.rule.check.error=Please provide valid email address
 source.idp.question=Do you have a login and password to any of the following?
 idp.detials=Identity Provider Details
 idp.selection.text=Please select the system where you have a current login and password.
+
+
+invalid.label.specimen =  Specimen with label {0} does not exists.
+invalid.barcode.specimen = Specimen with barcode {0} does not exists.
+invalid.id.scg=SCG with identifier {0} does not exists.
+invalid.id.specimen=Specimen with identifier {0} does not exists.
+invalid.name.scg =  SCG with name {0} does not exists.
+invalid.barcode.scg =  SCG with barcode {0} does not exists.
+invalid.ppi.participant=Participant with protocol participant identifier {0} in {1} collection protocol does not exists.
+invalid.id.participant= =Participant with identifier {0} does not exists.
+invalid.param.bo.participant=Participant identifier, protocol participant identifier missing. Please specify one of them as per the template definition
+invalid.param.bo.specimen=Specimen identifier, label or barcode missing. Please specify one of them as per the template definition
+invalid.param.bo.scg=SCG identifier, label or barcode missing. Please specify one of them as per the template definition
+
+bo.error.reading.category.file=Error occured while reading the category or entity names file.{0}
+error.missing.category=Category with name {0} does not exists.
+error.missing.entity=Entity with name {0} does not exists.
+error.missing.entitygroup=Entitygroup with name {0} does not exists.
+errors.invalid.arguement.numbers=Invalid no of arguments, please provide all the arguments.
+bo.error.no.hookentity={0} Form is not associated with any of the Static Entity.
