--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2489,9 +2489,11 @@ invalid.param.bo.participant=Participant identifier, protocol participant identi
 invalid.param.bo.specimen=Specimen identifier, label or barcode missing. Please specify one of them as per the template definition
 invalid.param.bo.scg=SCG identifier, label or barcode missing. Please specify one of them as per the template definition
 
+bo.error.no.formname=Please provide name of the form or file name which contains form names.
 bo.error.reading.category.file=Error occured while reading the category or entity names file.{0}
 error.missing.category=Category with name {0} does not exists.
 error.missing.entity=Entity with name {0} does not exists.
 error.missing.entitygroup=Entitygroup with name {0} does not exists.
 errors.invalid.arguement.numbers=Invalid no of arguments, please provide all the arguments.
 bo.error.no.hookentity={0} Form is not associated with any of the Static Entity.
+bo.error.entityname.format=Please give name entity in the "EntityGroupName:EntityName" format.
