--- a/WEB-INF/src/mainProtocolObjectQueries.properties
+++ b/WEB-INF/src/mainProtocolObjectQueries.properties
@@ -22,6 +22,7 @@ edu.wustl.catissuecore.domain.MolecularSpecimenReviewParameters=Select specimenE
 edu.wustl.catissuecore.domain.TissueSpecimenReviewEventParameters=Select specimenEventParameters.specimen.id from edu.wustl.catissuecore.domain.SpecimenEventParameters specimenEventParameters where specimenEventParameters.id =
 edu.wustl.catissuecore.domain.FluidSpecimenReviewEventParameters=Select specimenEventParameters.specimen.id from edu.wustl.catissuecore.domain.SpecimenEventParameters specimenEventParameters where specimenEventParameters.id =
 edu.wustl.catissuecore.domain.Address=Select user.id from edu.wustl.catissuecore.domain.User user where user.address.id =
+edu.wustl.catissuecore.domain.SpecimenRequirement=Select SpecimenRequirement.collectionProtocolEvent.collectionProtocol.id from edu.wustl.catissuecore.domain.SpecimenRequirement specimenRequirement where SpecimenRequirement.id =
 edu.wustl.catissuecore.domain.deintegration.ParticipantRecordEntry=Select recordEntry.participant.id from edu.wustl.catissuecore.domain.deintegration.ParticipantRecordEntry recordEntry where recordEntry.id =
 edu.wustl.catissuecore.domain.deintegration.SCGRecordEntry=Select recordEntry.specimenCollectionGroup.id from edu.wustl.catissuecore.domain.deintegration.SCGRecordEntry recordEntry where recordEntry.id =
 edu.wustl.catissuecore.domain.deintegration.SpecimenRecordEntry=Select recordEntry.specimen.id from edu.wustl.catissuecore.domain.deintegration.SpecimenRecordEntry recordEntry where recordEntry.id =
