added the clinportal db details
SVN-Revision: 26173

--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -109,9 +109,22 @@ include.entitygroup=
 saved.query.owner=
 
 #CSM DATABASE CREDENTIALS
+#if idp.enables is true please fill all the details for Clinportal DB below as well as IDP DB details.
+idp.enabled=true
 csm.database.type=
 csm.database.host=
 csm.database.port=
 csm.database.name=
 csm.database.username=
 csm.database.password=
+
+#Clinportal db details for user account integration.
+clinportal.database.type=
+clinportal.database.host=
+clinportal.database.port=
+clinportal.database.username=
+clinportal.database.name=
+clinportal.database.password=
+
+
+
