changes for specimenInterceptors.
SVN-Revision: 26183

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2497,3 +2497,9 @@ error.missing.entitygroup=Entitygroup with name {0} does not exists.
 errors.invalid.arguement.numbers=Invalid no of arguments, please provide all the arguments.
 bo.error.no.hookentity={0} Form is not associated with any of the Static Entity.
 bo.error.entityname.format=Please give name entity in the "EntityGroupName:EntityName" format.
+
+#For Hibernate interceptor
+error.interceptor.interface=Given processor class {0} does not implements the {1} .
+error.interceptor.insufficient.argument=Please specify all the required attributes in class element in ApplicationDAOProperties.xml
+error.interceptor.specimen.message=Error occured while creating the xml message for specimen id {0}.
+error.interceptor.specimen.wmq=Error occured while writing the xml message for specimen id {0}.
