--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -110,7 +110,7 @@ saved.query.owner=
 
 #CSM DATABASE CREDENTIALS
 #if idp.enables is true please fill all the details for Clinportal DB below as well as IDP DB details.
-idp.enabled=true
+idp.enabled=false
 csm.database.type=
 csm.database.host=
 csm.database.port=
@@ -126,5 +126,10 @@ clinportal.database.username=
 clinportal.database.name=
 clinportal.database.password=
 
+
+
+#IF cider integration is to be enabled then make this property to true & also fill 
+#other properties related with cider integration in build-custom.properties
+cider.integration.enabled=false
 
 
